--- a/index.html
+++ b/index.html
@@ -318,6 +318,10 @@
             }
         }
     </style>
+    
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "68a854d68cbc4dd29dbf094f2746c278"}'></script>
+    <!-- End Cloudflare Web Analytics -->
 </head>
 <body class="font-inter bg-gray-50 text-dark">
     <!-- 导航栏 -->
